unpackaged/main/default/objects/Signer__c/Signer__c.object-meta.xml
<CustomObject>
    <label>Signer</label>
    <nameField>
        <displayFormat>SIG-{000000}</displayFormat>
        <label>Signer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Signers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>