unpackaged/main/default/objects/Signer__c/fields/Merge_Template__c.field-meta.xml
<CustomField>
    <fullName>Merge_Template__c</fullName>
    <label>Merge Template</label>
    <referenceTo>litify_docs__Template__c</referenceTo>
    <relationshipLabel>Signers</relationshipLabel>
    <relationshipName>Signers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>