unpackaged/main/default/objects/Signer__c/fields/Signer_Description__c.field-meta.xml
<CustomField>
    <fullName>Signer_Description__c</fullName>
    <label>Signer Description</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>