unpackaged/main/default/objects/Signer__c/fields/Signer_Party__c.field-meta.xml
<CustomField>
    <fullName>Signer_Party__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Signer Party</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Signers</relationshipLabel>
    <relationshipName>Signers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>