unpackaged/main/default/objects/Signer__c/fields/Signing_Order__c.field-meta.xml
<CustomField>
    <fullName>Signing_Order__c</fullName>
    <label>Signing Order</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>