unpackaged/main/default/objects/Signer__c/validationRules/Cannot_Set_number_1.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Set_number_1</fullName>
    <active>true</active>
    <errorConditionFormula>Signing_Order__c = 1</errorConditionFormula>
    <errorDisplayField>Signing_Order__c</errorDisplayField>
    <errorMessage>You cannot set a signer as #1.</errorMessage>
</ValidationRule>